--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -17,12 +17,11 @@ style="background-image: url('assets/images/therm.jpg');">
 
 
   <h2 class="text-5xl font-extrabold mb-4 text-teal-700 text-center">
-    Prenatal and Child Immunization
-    <br>Record Management
+    Web-Based Prenatal and Child Immunization Records 
   </h2>
 
   <h3 class="text-2xl font-normal mb-6 text-teal-800 text-center">
-    Secure & Efficient Tracking System
+    with SMS Notification
   </h3>
 
   <p class="text-wrap text-gray-600 mb-20 text-center">
